Terraform-Files/alb-controller.tf

# # ─────────────────────────────────────────
# # SERVICE ACCOUNT FOR ALB CONTROLLER
# # ─────────────────────────────────────────
# resource "kubernetes_service_account" "alb_controller" {
#   metadata {
#     name      = "aws-load-balancer-controller"
#     namespace = "kube-system"

#     annotations = {
#       "eks.amazonaws.com/role-arn" = aws_iam_role.alb_controller.arn
#     }

#     labels = {
#       "app.kubernetes.io/component" = "controller"
#       "app.kubernetes.io/name"      = "aws-load-balancer-controller"
#     }
#   }

#   depends_on = [
#     aws_eks_node_group.main,
#     aws_iam_role_policy_attachment.alb_controller
#   ]
# }


# # ─────────────────────────────────────────
# # HELM INSTALL ALB CONTROLLER
# # ─────────────────────────────────────────
# resource "helm_release" "alb_controller" {
#   name       = "aws-load-balancer-controller"
#   repository = "https://aws.github.io/eks-charts"
#   chart      = "aws-load-balancer-controller"
#   namespace  = "kube-system"
#   version    = "1.8.1"

#   set {
#     name  = "clusterName"
#     value = aws_eks_cluster.main.name
#   }

#   set {
#     name  = "serviceAccount.create"
#     value = "false"
#   }

#   set {
#     name  = "serviceAccount.name"
#     value = "aws-load-balancer-controller"
#   }

#   set {
#     name  = "region"
#     value = var.aws_region
#   }

#   set {
#     name  = "vpcId"
#     value = aws_vpc.main.id
#   }

#   depends_on = [
#     kubernetes_service_account.alb_controller,
#     aws_iam_role_policy_attachment.alb_controller
#   ]
# }
